<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <EditText
            android:id="@+id/new_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/contact_firsName"
            android:inputType="text"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <EditText
            android:id="@+id/new_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/contact_lastName"
            android:inputType="text"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <EditText
            android:id="@+id/new_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/contact_phone"
            android:inputType="phone"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />

        <EditText
            android:id="@+id/new_emailid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/contact_emailId"
            android:inputType="textEmailAddress"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large" />


        <TextView
            android:id="@+id/new_dateAdded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date Added:"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
            android:textColor="@android:color/darker_gray" />

        <contactmanager.hci.com.contactsmanager.widgets.CustomDatePicker
            android:id="@+id/new_datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/new_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:text="@string/contact_save" />
    </LinearLayout>
</ScrollView>